--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 * {
     margin: 0;
     padding: 0;
-    overflow: hidden; 
-    background-color: lightgray;
+    overflow: hidden;
+    background-color: #D8BFD8; 
 }
 
 .container {
     display: grid;
     height: 100vh;
     grid-template-columns: 0.6fr 1.1fr 1.1fr 1.1fr 1.1fr;
-    grid-template-rows: 0.7fr  2.7fr 0.6fr;
+    grid-template-rows: 0.7fr 2.7fr 0.6fr;
     grid-template-areas: "sidebar nav nav nav nav"
                          "sidebar conteudo1 conteudo2 conteudo3 conteudo4"
                          "sidebar footer footer footer footer";
@@ -31,10 +31,10 @@ p {
     padding: 0.5em;
     grid-area: nav;
     border-radius: 0.5em;
-    background-image: url("side_img/OIP\ \(3\).jpg");
+    background-image: url("side_img/OIP3.jpg");
     background-position: center;
     background-size:contain;
-    background-color: lightgreen;
+    
 }
 
 #sidebar {
@@ -45,7 +45,6 @@ p {
     grid-area: sidebar;
     border-radius: 0.5em;
     align-content: center;
-    
 }
 
 #imagem-lateral {
@@ -55,11 +54,6 @@ p {
     background-size: cover;
     margin-top: 0.5em;
     margin-bottom: 0.5em;
-    background-color: lightskyblue;
-}
-
-#img-lateral {
-    background-color: lightskyblue;
 }
 
 .cadastro {
@@ -71,22 +65,36 @@ p {
     text-align: center;
     padding-top: 1.5em;
     grid-area: conteudo1;
+}
+
+.cadastro > p,
+.editar > p,
+.pesquisar > p,
+.resultado > p {
+    text-align: center;
+    /*border: 2px double black;*/
+    border-style: outset;
     border-radius: 0.5em;
-    border: 1px solid red;
+    padding: 0.5em;
 }
 
 #cad-form,
 #edit-form,
 #search-form,
 #result-search {
-    padding: 10px;
+    padding: 2.5em;
     font-family: 'Roboto', sans-serif;
-    margin-top: 1.5em;
-    margin-bottom: 1.5em;
+    margin-top: 2em;
+    margin-bottom: 1.55em;
     height: 70%;
-    border-radius: 15px;
-    background-color: lightseagreen;
-    border: 1px solid green;
+    border-radius: 0.5em;
+    border-style: outset;
+    /*background-color: #f1ecec;*/
+    background-color: #D8BFD8;
+}
+#result-search {
+    padding-left: 0.5em;
+    resize: none;
 }
 
 input {
@@ -94,16 +102,17 @@ input {
     padding: 0.3rem 0.5rem;
     font-size: 1rem;
     margin: 0.5em;
+    margin-bottom: 2.5em;
     outline: unset;
     border: unset;
+    background-color: white;
 }
 
 .button {
     display: flex;
     padding: 1rem;
-    margin-top: 1rem;
+    margin-top: 0;
     justify-content: space-around;
-    border: 1px solid black;
     background-color: transparent;
 }
 
@@ -111,19 +120,21 @@ input {
     border: none;
     cursor: pointer;
     outline: none;
+    position: relative;
     padding: 0.2rem 0.3rem;
     align-items: center;
     font-size: 1rem;
     line-height: 24px;
-    background-color: aquamarine;
+    /*background-color: #D8BFD8;*/
+    background-color: white;
     color: black;
 }
 
 #btn:hover {
     text-decoration: none;
-    color: white;
-    background-color: green;
-    transition: 0.2s
+    color: brown;
+    background-color: #D8BFD8;
+    transition: 0.2s;
 }
 
 .editar {
@@ -137,7 +148,6 @@ input {
     grid-area: conteudo2;
     border-radius: 0.5em;
     background-color: transparent;
-    border: 1px solid red;
 }
 
 .pesquisar {
@@ -151,7 +161,6 @@ input {
     grid-area: conteudo3;
     border-radius: 0.5em;
     background-color: transparent;
-    border: 1px solid red;
 }
 
 .resultado {
@@ -164,14 +173,13 @@ input {
     padding-top: 1.5em;
     grid-area: conteudo4;
     border-radius: 0.5em;
-    background-color: transparent;
-    border: 1px solid red;
 }
 
-#result-form {
-    display: flex;
-    flex-direction: column;
-    background-color: aquamarine;;
+#result-search {
+    outline: none;
+    border: none;
+    margin-top: 1em;
+    background-color: white;
 }
 
 #footer {
@@ -179,8 +187,8 @@ input {
     font-size: 1.5em;
     font-weight: 300;
     text-align: center;
-    padding-top: 2.5rem;
+    padding-top: 1.5rem;
+    padding-bottom: 0;
     margin-top: 0.25rem;
     grid-area: footer;
-    background-color: transparent;
 }
