--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 body {
     width: 100vw;
     height: 100vh;
+    padding: 10px;
     background: blue;
 }
 
@@ -15,10 +16,10 @@ body {
     display: grid;
     grid-template-columns: 0.5fr 1.2fr 1.2fr 1.2fr 1.2fr 0.5fr;
     grid-template-rows: 0.3fr 2.4fr 0.3fr;
-    grid-template-areas: "sidebar-left cabecalho cabecalho cabecalho cabecalho sidebar-rigth"
-                         "sidebar-left form1 form2 form3 form4 sidebar-rigth"
-                         "sidebar-left footer footer footer footer sidebar-rigth";
-    grid-gap: 1em;
+    grid-template-areas: "sidebar-left cabecalho cabecalho cabecalho cabecalho sidebar-right"
+                         "sidebar-left form1 form2 form3 form4 sidebar-right"
+                         "sidebar-left footer footer footer footer sidebar-right";
+    grid-gap: 0.5em;
     background: black;
 }
 .sidebar-left {
@@ -56,58 +57,131 @@ body {
     background-color: lightgray;
 }
 
-.sidebar-rigth {
+.sidebar-right {
     grid-area: sidebar-rigth;
     background-color: lightgreen;
 }
 
+.cabecalho {
+    
+    font-family: 'Bruno Ace SC', 'cursive';
+    color: white;
+    font-weight: 300;
+    border-radius: 0.5em;
+    text-align: center;
+    grid-area: cabecalho;
+    /*background-image: url("side_img/OIP3.jpg");
+    -webkit-text-stroke: 0.5px black;
+    background-position: center;
+    background-size:contain;*/
+}
+
 @media screen and (max-width: 480px) {
     .sidebar-left,
-    .sidebar-rigth {
+    .sidebar-right {
         display: none;
     }
     .max-container {
-        grid-template-areas: "cabecalho" 
+        grid-template-areas: "cabecalho"
                              "form1"
                              "form2"
                              "form3"
                              "form4"
                              "footer";
-                             
         grid-template-columns: 1fr;
-        grid-template-rows: 100px;
+        
+    }
+
+    h2, h3, p {
+        padding: 0.5em;
+        font-family: 'Bruno Ace SC', 'cursive';
+        text-align: center;
+        font-size: 1.15rem;
+    }
+
+    .cabecalho {
+        width: 90%;
+        padding: 2em;
+        font-size: 10px;
+        font-weight: 300;
+        border-radius: 0.5em;
+        background-size: cover;
+        margin-left: 10px;
+        margin-top: 5px;
+    }
+
+    .form1,
+    .form2,
+    .form3,
+    .form4 {
+        text-align: center;
+        width: 84.5%;
+        display: flex;
+        flex-direction: column;
+        padding: 2em;
+        font-family: 'Roboto', sans-serif;
+        border-radius: 0.5em;
+        margin: 0 10px 0 10px;
+    }
+    
+    .footer {
+        text-align: center;
+        font-size: 1em;
+        width: 87%;
+        margin: 0 10px;
+        font-family: 'Bruno Ace SC', 'cursive';
+        padding: 2em;
+        border-radius: 0.5em;
+    }
+    
+    .sidebar-left {
+        width: 100%;
+        height: 100vh;
+        grid-area: sidebar-left;
+        border-radius: 0.5em;
+        align-content: center;
+        display: flex;
+        flex-direction: column;
+        background-position: center;
+        background-size: cover;
+    }
+
+/*#imagem-lateral-esquerda {
+    width: 8vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-position: center;
+    background-size: cover;
+    margin-top: 0.1rem;
+    margin-bottom: 0.1rem;
+}*/
+    .sidebar-right {
+        width: 100%;
+        height: 100vh;
+        grid-area: sidebar-right;
+        border-radius: 0.5em;
+        align-content: center;
+        display: flex;
+        flex-direction: column;
+        background-position: center;
+        background-size: cover;
     }
 }
-
-
-
-
-
-
+/*#imagem-lateral-direita {
+    width:8vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-position: center;
+    background-size: cover;
+    margin-top: 0.1rem;
+    margin-bottom: 0.1rem;
+}*/
 
 
 /*
-p, h3 {
-    color: black;
-    background-color: transparent;
-}
-
-#nav {
-    font-family: 'Bruno Ace SC', 'cursive';
-    font-size: 2.8em;
-    font-weight: 300;
-    text-align: center;
-    -webkit-text-stroke: 1px white;
-    padding: 0.5em;
-    grid-area: nav;
-    border-radius: 0.5em;
-    background-image: url("side_img/OIP3.jpg");
-    background-position: center;
-    background-size:contain;
-    
-}
-
-.sidebar {
+.sidebar-left {
     font-family: 'Bruno Ace SC', 'cursive';
     font-size: 1.5em;
     font-weight: 300;
@@ -117,7 +191,7 @@ p, h3 {
     align-content: center;
 }
 
-#imagem-lateral {
+#imagem-lateral-esquerda {
     display: flex;
     flex-direction: column;
     background-position: center;
