--- a/style.css
+++ b/style.css
@@ -88,7 +88,76 @@ h2 {
     flex-direction: column;
 }
 
-@media screen  and (max-width: 1440px) {
+@media screen  and (max-width: 2560px) {
+    
+    h2 {
+        padding-top: 1em;
+        font-family: 'Bruno Ace SC', 'cursive';
+        text-align: center;
+        font-size: 1.9rem;
+    }
+
+    p {
+        padding: 0.5em;
+        font-family: 'Bruno Ace SC', 'cursive';
+        text-align: center;
+        font-size: 1.15rem;
+    }
+
+    .cabecalho {
+        text-align: center;
+        width: 100%;
+        padding: 0 2rem;
+        height: 150px;
+        font-weight: 300;
+        border-radius: 0.5em;
+        background-size: cover;
+        -webkit-text-stroke: 0.5px black;
+        background-position: center;
+        background-size:contain;
+    }
+
+    .form1,
+    .form2,
+    .form3,
+    .form4 {
+        text-align: center;
+        width: 25;
+        height: 90%;
+        padding: 1rem;
+        margin: 1em;
+        font-family: 'Roboto', sans-serif;
+        border-radius: 0.5em;
+        font-size: 1.5rem;
+    }
+
+    .footer {
+        text-align: center;
+        font-size: 1.5rem;
+        font-family: 'Bruno Ace SC', 'cursive';
+        padding: 2rem;
+        border-radius: 0.5em;
+        
+    }
+
+    #input-temp,
+    #input-episode {
+        width: 7rem;
+        margin: 0 auto;
+        height: 2em;
+    }
+
+    #input-serie {
+        height: 2em;
+        width: 75%;
+    }
+}
+
+@media screen  and (max-width: 2160px) {
+
+    .sidebar-esquerda {
+        background-color: brown;
+    }
     
     h2 {
         padding-top: 1em;
@@ -123,10 +192,10 @@ h2 {
     .form3,
     .form4 {
         text-align: center;
-        width: 16rem;
+        width: 25;
         height: 90%;
-        padding: 2rem;
-        margin: 1.5em;
+        padding: 1rem;
+        margin: 1em;
         font-family: 'Roboto', sans-serif;
         border-radius: 0.5em;
         font-size: 1.5rem;
@@ -134,7 +203,76 @@ h2 {
 
     .footer {
         text-align: center;
-        font-size: 1rem;
+        font-size: 1.5rem;
+        font-family: 'Bruno Ace SC', 'cursive';
+        padding: 2rem;
+        border-radius: 0.5em;
+    }
+
+    #input-temp,
+    #input-episode {
+        width: 7rem;
+        margin: 0 auto;
+        height: 2em;
+    }
+
+    #input-serie {
+        height: 2em;
+        width: 75%;
+    }
+}
+
+@media screen  and (max-width: 1920px) {
+
+    .sidebar-esquerda {
+        background-color: blueviolet;
+    }
+    
+    h2 {
+        padding-top: 1em;
+        font-family: 'Bruno Ace SC', 'cursive';
+        text-align: center;
+        font-size: 1.9rem;
+    }
+
+    p {
+        padding: 0.5em;
+        font-family: 'Bruno Ace SC', 'cursive';
+        text-align: center;
+        font-size: 1.15rem;
+    }
+
+    .cabecalho {
+        text-align: center;
+        width: 100%;
+        padding: 0 2rem;
+        height: 150px;
+        font-weight: 300;
+        border-radius: 0.5em;
+        background-size: cover;
+        margin-left: 10px;
+        -webkit-text-stroke: 0.5px black;
+        background-position: center;
+        background-size:contain;
+    }
+
+    .form1,
+    .form2,
+    .form3,
+    .form4 {
+        text-align: center;
+        width: 25;
+        height: 90%;
+        padding: 1rem;
+        margin: 1em;
+        font-family: 'Roboto', sans-serif;
+        border-radius: 0.5em;
+        font-size: 1.5rem;
+    }
+
+    .footer {
+        text-align: center;
+        font-size: 1.5rem;
         width: 100%;
         margin: 0 10px;
         font-family: 'Bruno Ace SC', 'cursive';
@@ -144,19 +282,377 @@ h2 {
 
     #input-temp,
     #input-episode {
-        width: 5.5em;
+        width: 7rem;
         margin: 0 auto;
         height: 2em;
     }
 
     #input-serie {
         height: 2em;
-        width: 65%;
+        width: 75%;
     }
 }
- 
 
-@media screen  and (max-width: 480px) {
+@media screen  and (max-width: 1600px) {
+
+    .sidebar-esquerda {
+        background-color: aqua;
+    }
+    
+    h2 {
+        padding-top: 1em;
+        font-family: 'Bruno Ace SC', 'cursive';
+        text-align: center;
+        font-size: 1.9rem;
+    }
+
+    p {
+        padding: 0.5em;
+        font-family: 'Bruno Ace SC', 'cursive';
+        text-align: center;
+        font-size: 1.15rem;
+    }
+
+    .cabecalho {
+        text-align: center;
+        width: 100%;
+        padding: 0 2rem;
+        height: 150px;
+        font-weight: 300;
+        border-radius: 0.5em;
+        background-size: cover;
+        margin-left: 10px;
+        -webkit-text-stroke: 0.5px black;
+        background-position: center;
+        background-size:contain;
+    }
+
+    .form1,
+    .form2,
+    .form3,
+    .form4 {
+        text-align: center;
+        width: 25;
+        height: 90%;
+        padding: 1rem;
+        margin: 1em;
+        font-family: 'Roboto', sans-serif;
+        border-radius: 0.5em;
+        font-size: 1.5rem;
+    }
+
+    .footer {
+        text-align: center;
+        font-size: 1.5rem;
+        width: 100%;
+        margin: 0 10px;
+        font-family: 'Bruno Ace SC', 'cursive';
+        padding: 2rem;
+        border-radius: 0.5em;
+    }
+
+    #input-temp,
+    #input-episode {
+        width: 7rem;
+        margin: 0 auto;
+        height: 2em;
+    }
+
+    #input-serie {
+        height: 2em;
+        width: 75%;
+    }
+}
+
+@media screen  and (max-width: 1366px) {
+
+    .sidebar-esquerda {
+        background-color: yellow;
+    }
+    
+    h2 {
+        padding-top: 1em;
+        font-family: 'Bruno Ace SC', 'cursive';
+        text-align: center;
+        font-size: 1.9rem;
+    }
+
+    p {
+        padding: 0.5em;
+        font-family: 'Bruno Ace SC', 'cursive';
+        text-align: center;
+        font-size: 1.15rem;
+    }
+
+    .cabecalho {
+        text-align: center;
+        width: 100%;
+        padding: 0 2rem;
+        height: 150px;
+        font-weight: 300;
+        border-radius: 0.5em;
+        background-size: cover;
+        margin-left: 10px;
+        -webkit-text-stroke: 0.5px black;
+        background-position: center;
+        background-size:contain;
+    }
+
+    .form1,
+    .form2,
+    .form3,
+    .form4 {
+        text-align: center;
+        width: 25;
+        height: 90%;
+        padding: 1rem;
+        margin: 1em;
+        font-family: 'Roboto', sans-serif;
+        border-radius: 0.5em;
+        font-size: 1.5rem;
+    }
+
+    .footer {
+        text-align: center;
+        font-size: 1.5rem;
+        width: 100%;
+        margin: 0 10px;
+        font-family: 'Bruno Ace SC', 'cursive';
+        padding: 2rem;
+        border-radius: 0.5em;
+    }
+
+    #input-temp,
+    #input-episode {
+        width: 7rem;
+        margin: 0 auto;
+        height: 2em;
+    }
+
+    #input-serie {
+        height: 2em;
+        width: 75%;
+    }
+}
+
+@media screen  and (max-width: 1280px) {
+
+    .sidebar-esquerda {
+        background-color: burlywood;
+    }
+    
+    h2 {
+        padding-top: 1em;
+        font-family: 'Bruno Ace SC', 'cursive';
+        text-align: center;
+        font-size: 1.9rem;
+    }
+
+    p {
+        padding: 0.5em;
+        font-family: 'Bruno Ace SC', 'cursive';
+        text-align: center;
+        font-size: 1.15rem;
+    }
+
+    .cabecalho {
+        text-align: center;
+        width: 100%;
+        padding: 0 2rem;
+        height: 150px;
+        font-weight: 300;
+        border-radius: 0.5em;
+        background-size: cover;
+        margin-left: 10px;
+        -webkit-text-stroke: 0.5px black;
+        background-position: center;
+        background-size:contain;
+    }
+
+    .form1,
+    .form2,
+    .form3,
+    .form4 {
+        text-align: center;
+        width: 25;
+        height: 90%;
+        padding: 1rem;
+        margin: 1em;
+        font-family: 'Roboto', sans-serif;
+        border-radius: 0.5em;
+        font-size: 1.5rem;
+    }
+
+    .footer {
+        text-align: center;
+        font-size: 1.5rem;
+        width: 100%;
+        margin: 0 10px;
+        font-family: 'Bruno Ace SC', 'cursive';
+        padding: 2rem;
+        border-radius: 0.5em;
+    }
+
+    #input-temp,
+    #input-episode {
+        width: 7rem;
+        margin: 0 auto;
+        height: 2em;
+    }
+
+    #input-serie {
+        height: 2em;
+        width: 75%;
+    }
+}
+
+@media screen  and (max-width: 1024px) {
+
+    .sidebar-esquerda,
+    .sidebar-direita {
+        display: none;
+    }
+    
+    h2 {
+        padding-top: 1em;
+        font-family: 'Bruno Ace SC', 'cursive';
+        text-align: center;
+        font-size: 1.9rem;
+    }
+
+    p {
+        padding: 0.5em;
+        font-family: 'Bruno Ace SC', 'cursive';
+        text-align: center;
+        font-size: 1.15rem;
+    }
+
+    .cabecalho {
+        text-align: center;
+        width: 100%;
+        padding: 0 2rem;
+        height: 150px;
+        font-weight: 300;
+        border-radius: 0.5em;
+        background-size: cover;
+        margin-left: 10px;
+        -webkit-text-stroke: 0.5px black;
+        background-position: center;
+        background-size:contain;
+    }
+
+    .form1,
+    .form2,
+    .form3,
+    .form4 {
+        text-align: center;
+        width: 25;
+        height: 90%;
+        padding: 1rem;
+        margin: 1em;
+        font-family: 'Roboto', sans-serif;
+        border-radius: 0.5em;
+        font-size: 1.5rem;
+    }
+
+    .footer {
+        text-align: center;
+        font-size: 1.5rem;
+        width: 100%;
+        margin: 0 10px;
+        font-family: 'Bruno Ace SC', 'cursive';
+        padding: 2rem;
+        border-radius: 0.5em;
+    }
+
+    #input-temp,
+    #input-episode {
+        width: 7rem;
+        margin: 0 auto;
+        height: 2em;
+    }
+
+    #input-serie {
+        height: 2em;
+        width: 75%;
+    }
+}
+
+@media screen  and (max-width: 960px) {
+
+    .sidebar-esquerda,
+    .sidebar-direita {
+        display: none;
+    }
+
+    h2 {
+        padding-top: 1em;
+        font-family: 'Bruno Ace SC', 'cursive';
+        text-align: center;
+        font-size: 1.9rem;
+    }
+
+    p {
+        padding: 0.5em;
+        font-family: 'Bruno Ace SC', 'cursive';
+        text-align: center;
+        font-size: 1.15rem;
+    }
+
+    .cabecalho {
+        text-align: center;
+        width: 100%;
+        padding: 0 2rem;
+        height: 150px;
+        font-weight: 300;
+        border-radius: 0.5em;
+        background-size: cover;
+        margin-left: 10px;
+        -webkit-text-stroke: 0.5px black;
+        background-position: center;
+        background-size:contain;
+    }
+
+    .form1,
+    .form2,
+    .form3,
+    .form4 {
+        text-align: center;
+        width: 25;
+        height: 90%;
+        padding: 1rem;
+        margin: 1em;
+        font-family: 'Roboto', sans-serif;
+        border-radius: 0.5em;
+        font-size: 1.5rem;
+    }
+
+    .footer {
+        text-align: center;
+        font-size: 1.5rem;
+        width: 100%;
+        margin: 0 10px;
+        font-family: 'Bruno Ace SC', 'cursive';
+        padding: 2rem;
+        border-radius: 0.5em;
+        background-color: greenyellow;
+    }
+
+    #input-temp,
+    #input-episode {
+        width: 7rem;
+        margin: 0 auto;
+        height: 2em;
+    }
+
+    #input-serie {
+        height: 2em;
+        width: 75%;
+    }
+}
+
+
+@media screen  and (max-width: 640px) {
     .sidebar-esquerda,
     .sidebar-direita {
         display: none;
@@ -208,7 +704,7 @@ h2 {
     .form3,
     .form4 {
         text-align: center;
-        width: 100%;
+        width: 97%;
         display: flex;
         flex-direction: column;
         padding: 2rem;
@@ -216,32 +712,35 @@ h2 {
         border-radius: 0.5em;
         margin: 0 10px 0 10px;
         grid-template-columns: 1fr;
-        float: left;
+        
     }
     
     .footer {
         text-align: center;
         font-size: 1rem;
-        width: 100%;
+        width: 97%;
         margin: 0 10px;
         font-family: 'Bruno Ace SC', 'cursive';
         padding: 2rem;
         border-radius: 0.5em;
+        background-color: lightgray;;
     }
 
     #input-temp,
     #input-episode {
         width: 20%;
-        margin: 0 auto;
-        height: 2em;
+        margin: 0 auto 0 auto;
+        height: 2.5rem;
     }
 
     #input-serie {
-        height: 2em;
+        height: 2.5rem;
         width: 60%;
-        margin: 0 auto;
+        margin: 0 auto 0 auto;
     }
 }
+
+
 
 
 
