--- a/style.css
+++ b/style.css
@@ -54,27 +54,35 @@ h2 {
 
 .form1 {
     grid-area: form1;
-    background-color: lightskyblue;
+    background-color: lightslategray;
+    /*background-color: lightskyblue;*/
 }
 
 .form2 {
     grid-area: form2;
-    background-color: lightpink;
+    /*background-color: lightpink;*/
+    background-color: lightskyblue;
 }
 
 .form3 {
     grid-area: form3;
-    background-color: lightgoldenrodyellow;
+    /*background-color: lightgoldenrodyellow;*/
+    background-color: lightpink;
 }
 
 .form4 {
     grid-area: form4;
-    background-color: lightslategray;
+    background-color: lightgoldenrodyellow;
 }
 
 .footer {
+    color: white;
     grid-area: footer;
     background-color: lightgray;
+    background-image: url("side_img/OIP3.jpg");
+    -webkit-text-stroke: 0.5px black;
+    background-position: center;
+    background-size:contain;
 }
 
 .sidebar-direita {
@@ -105,8 +113,6 @@ h2 {
     img {
         width: 100%;
         height: 100%;
-        
-        
     }    
        
     h2 {
@@ -150,13 +156,56 @@ h2 {
         font-size: 1.5rem;
     }
 
+    .form1 {
+        background-image: url("side_img/Home\ cinema-pana.png");
+        background-size: cover;
+        background-position: center;
+        background-size:contain;
+        background-repeat: no-repeat;
+        background-position: bottom;
+        background-image: transparent;
+    }
+    .form2 {
+        background-image: url("side_img/home-cinema-rafiki-360.png");
+        background-size: cover;
+        background-position: center;
+        background-size:contain;
+        background-repeat: no-repeat;
+        background-position: bottom;
+        background-image: transparent;
+    }
+
+    .form3 {
+        background-image: url("side_img/Drive-in\ movie\ theater-pana.png");
+        background-size: cover;
+        background-position: center;
+        background-size:contain;
+        background-repeat: no-repeat;
+        background-position: bottom;
+        background-image: transparent;
+    }
+
+    .form4 {
+        background-image: url("side_img/Drive-in\ movie\ theater-rafiki\ \(2\).png");
+        background-size: cover;
+        background-position: center;
+        background-size:contain;
+        background-repeat: no-repeat;
+        background-position: bottom;
+        background-image: transparent;
+    }
+
     .footer {
         text-align: center;
+        font-weight: 300;
         font-size: 1.5rem;
         font-family: 'Bruno Ace SC', 'cursive';
         padding: 2rem;
         border-radius: 0.5em;
-        
+        background-size: cover;
+        -webkit-text-stroke: 1.5px black;
+        background-position: center;
+        background-size:contain;
     }
 
     #input-temp,
@@ -179,24 +228,28 @@ h2 {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        ;
     }
     
-    img {
+    #img-1,
+    #img-2,
+    #img-3,
+    #img-4,
+    #img-5,
+    #img-6,
+    #img-7 {
         max-width: 100%;
         max-height: 100%;
-        object-fit: contain;
-        
-    }  
-    
+        background-size: contain;
+    }
+       
     .sidebar-direita {
         background-color: brown;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
     }
-    
-    
-    
+        
     h2 {
         padding-top: 1em;
         font-family: 'Bruno Ace SC', 'cursive';
@@ -546,6 +599,7 @@ h2 {
 
 @media screen  and (max-width: 1024px) {
 
+    
     .sidebar-esquerda,
     .sidebar-direita {
         display: none;
@@ -651,6 +705,9 @@ h2 {
         background-size:contain;
     }
 
+    
+
+
     .form1,
     .form2,
     .form3,
@@ -688,7 +745,6 @@ h2 {
         width: 75%;
     }
 }
-
 
 @media screen  and (max-width: 640px) {
     .sidebar-esquerda,
@@ -777,12 +833,6 @@ h2 {
         margin: 0 auto 0 auto;
     }
 }
-
-
-
-
-
-
 
 /*.sidebar-esquerda {
     width: 100%;
